--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,13 +3,26 @@ a {
 }
 
 .bar {
-  top: 0.3em;
+  top: 0.2em;
   position: absolute;
   width: 70%;
   text-align: right;
   font-size: 9em;
+
 }
 
+a:visited {
+  color: black;
+}
+
+#small {
+  font-size: 0.5em;
+  line-height: 10%
+}
+
+.nav:visited {
+  color: white;
+}
 
 .nav {
   position: relative;
@@ -18,7 +31,7 @@ a {
   margin-left: auto;
   color: white;
   text-align: right;
-  padding: 10px;
+  padding: 0.4em;
   font-size: 1.5em;
 }
 
@@ -42,18 +55,38 @@ a {
   background-color: blueviolet;
 }
 
+.twitter {
+  position: relative;
+  float: right;
+  text-align: right;
+  font-size: 1.5em;
+  padding-right: 0.4em;
+  width: 15%
+}
+
+#main {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
+  padding: 2em;
+  float: right;
+  width: 63%;
+}
+
 #footer {
   background-color: dimgrey;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   right: 0px;
   left: 0px;
   margin: auto;
-  height: 2em;
+  height: 1.5em;
   width: 50%;
   text-align: center;
-  padding-top: 0.5em;
+  padding-top: 0.6em;
   color: white;
+
 }
 
 
