--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -15,6 +15,9 @@ a:visited {
   color: black;
 }
 
+.main a {
+  color: crimson;
+}
 #small {
   font-size: 0.5em;
   line-height: 10%
@@ -64,7 +67,7 @@ a:visited {
   width: 15%
 }
 
-#main {
+.main {
   position: relative;
   margin-left: auto;
   margin-right: auto;
