--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,5 +1,6 @@
 a {
   text-decoration: none;
+  color: black;
 }
 
 .bar {
@@ -64,7 +65,12 @@ a:visited {
   text-align: right;
   font-size: 1.5em;
   padding-right: 0.4em;
-  width: 15%
+  width: 18%
+}
+
+.blog {
+  font-size: 0.6em;
+  text-align: left;
 }
 
 .main {
@@ -74,7 +80,7 @@ a:visited {
   margin-bottom: 3em;
   padding: 2em;
   float: right;
-  width: 63%;
+  width: 58%;
 }
 
 #footer {
