--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,126 +1,112 @@
+body {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div {
+    float: left;
+}
+
 a {
   text-decoration: none;
-  color: black;
-}
-
-.bar {
-  top: 0.2em;
-  position: absolute;
-  width: 70%;
-  text-align: right;
-  font-size: 9em;
-
-}
-
-a:visited {
-  color: black;
-}
-
-.main a {
   color: crimson;
 }
-#small {
-  font-size: 0.5em;
-  line-height: 10%
+
+#side a {
+  color: black;
 }
 
-.nav:visited {
-  color: white;
+#title {
+    width: 73%;
+    height: 1.5em;
+    font-size: 4em;
+    text-align: right;
+    padding-right: 2%;
+    line-height: 75%;
+    padding-top: 0.5em;
+}
+
+#title span {
+    color: grey;
 }
 
 .nav {
-  position: relative;
-  height: 1em;
-  width: 25%;
-  margin-left: auto;
-  color: white;
-  text-align: right;
-  padding: 0.4em;
-  font-size: 1.5em;
+    text-align: right;
+    background-color: green;
+    width: 24%;
+    height: 1.5em;
+    padding-top: 0.5em;
+    padding-right: 1%;
+    color: white;
+    font-weight: bold;
 }
 
-#nav1 {
-  background-color: deepskyblue;
+#main {
+    width: 69%;
+    padding: 3%;
+    margin-bottom: 2em;
 }
 
-#nav2 {
-  background-color: chartreuse;
+#side a:hover {
+  color: crimson;
 }
 
-#nav3 {
-  background-color: gold;
-}
-
-#nav4 {
-  background-color: deeppink;
-}
-
-#nav5 {
-  background-color: blueviolet;
-}
-
-.twitter {
-  position: relative;
-  float: right;
-  text-align: right;
-  font-size: 1.5em;
-  padding-right: 0.4em;
-  width: 18%
-}
-
-.blog {
-  font-size: 0.6em;
-  text-align: left;
-}
-
-.main {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 3em;
-  padding: 2em;
-  float: right;
-  width: 58%;
+#side {
+    background-color: #DCDCDC;
+    width: 23%;
+    text-align: right;
+    padding: 1%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 #footer {
-  background-color: dimgrey;
+  background-color: #DCDCDC;
+  color: white;
+  text-align: center;
+  height: 1.5em;
+  padding-top: 0.5em;
   position: fixed;
+  width: 50%;
   bottom: 0px;
   right: 0px;
   left: 0px;
   margin: auto;
-  height: 1.5em;
-  width: 50%;
-  text-align: center;
-  padding-top: 0.6em;
-  color: white;
-
 }
 
+#nav1 {
+  background-color: #3385D6;
+}
+
+#nav2 {
+  background-color: #0066CC;
+}
+
+#nav3 {
+  background-color: #0052A3;
+}
+
+#nav4 {
+  background-color: #003D7A;
+}
+
+.nav:hover {
+    color: black;
+}
 
 #nav1:hover {
-  color: black;
   background-color: yellow;
 }
 
 #nav2:hover {
-  color: black;
   background-color: yellow;
 }
 
 #nav3:hover {
-  color: black;
   background-color: yellow;
 }
 
 #nav4:hover {
-  color: black;
   background-color: yellow;
 }
-
-#nav5:hover {
-  color: black;
-  background-color: yellow;
-}
-
