--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -65,8 +65,8 @@ a {
   background-color: #DCDCDC;
   color: white;
   text-align: center;
-  height: 1.5em;
   padding-top: 0.5em;
+  padding-bottom: 0.5em;
   position: fixed;
   width: 50%;
   bottom: 0px;
