make various changes

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -62,7 +62,7 @@ a {
 }
 
 #footer {
-  background-color: #DCDCDC;
+  background-color: grey;
   color: white;
   text-align: center;
   padding-top: 0.5em;
