--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -4,6 +4,14 @@ body {
     margin-right: auto;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
 div {
     float: left;
 }
