--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -47,7 +47,6 @@ a {
     padding-top: 0.5em;
     padding-right: 1%;
     color: white;
-    font-weight: bold;
 }
 
 #main {
@@ -65,8 +64,14 @@ a {
     width: 23%;
     text-align: right;
     padding: 1%;
-    padding-top: 2%;
     padding-bottom: 2%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0px;
+
 }
 
 #footer {
