--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -2,6 +2,7 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    font-family: Helvetica, sans-serif;
 }
 
 img {
@@ -33,6 +34,7 @@ a {
     padding-right: 2%;
     line-height: 75%;
     padding-top: 0.5em;
+    font-family: Times;
 }
 
 #title span {
