--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -1,6 +1,6 @@
 h1 {
     padding-left: 5%;
-    padding-top: 1em;    
+    padding-top: 1em;
     color: white;
     background-color: darkslateblue;
     font-weight: normal;
@@ -19,4 +19,9 @@ section {
     padding-right: 2%;
     margin-bottom: 4em;
 
+}
+
+img {
+    margin-left: auto;
+    margin-right: auto;
 }
