--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -3,6 +3,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     font-family: Helvetica, sans-serif;
+    margin-top: 0px;
 }
 
 img {
@@ -27,23 +28,39 @@ a {
 }
 
 #title {
-    width: 73%;
-    height: 1.5em;
+    width: 75%;
+    height: 2em;
     font-size: 4em;
     text-align: right;
-    padding-right: 2%;
     line-height: 75%;
-    padding-top: 0.5em;
     font-family: Times;
+    background-color: black;
+    position: relative;
 }
 
-#title span {
+#title img {
+  height: 100%;
+}
+
+#words {
+  color: white;
+  float: right;
+  position: absolute;
+  top: 0px;
+  background-color: rgba(0,0,0,0.5);
+  height: 1.7em;
+  padding-top: 0.3em;
+  padding-left: 2%;
+  padding-right: 2%;
+  right: 2%;
+}
+
+#words span {
     color: grey;
 }
 
 .nav {
     text-align: right;
-    background-color: green;
     width: 24%;
     height: 1.5em;
     padding-top: 0.5em;
@@ -52,9 +69,11 @@ a {
 }
 
 #main {
+    padding-top: 1%;
     width: 69%;
-    padding: 3%;
-    margin-bottom: 2em;
+    padding-right: 3%;
+    padding-left: 3%;
+    margin-bottom: 4em;
 }
 
 #side a:hover {
@@ -72,7 +91,7 @@ a {
 img {
   max-width: 100%;
   max-height: 100%;
-  margin: 0px;
+  margin: auto;
 
 }
 
