--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -2,7 +2,7 @@ body {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     margin-top: 0px;
 }
 
@@ -48,8 +48,8 @@ a {
   position: absolute;
   top: 0px;
   background-color: rgba(0,0,0,0.5);
-  height: 1.7em;
-  padding-top: 0.3em;
+  height: 1.75em;
+  padding-top: 0.25em;
   padding-left: 2%;
   padding-right: 2%;
   right: 2%;
@@ -74,6 +74,13 @@ a {
     padding-right: 3%;
     padding-left: 3%;
     margin-bottom: 4em;
+}
+
+#faux {
+  display: block;
+  font-size: 5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 #side a:hover {
