--- a/stylesheets/info.css
+++ b/stylesheets/info.css
@@ -45,6 +45,7 @@ li:before {
     background-color: rgba(0,0,0,0.6);
     height: 100vh;
     padding: 2%;
+    padding-bottom: 5%;
 }
 
 .col span {
