--- a/stylesheets/info.css
+++ b/stylesheets/info.css
@@ -3,7 +3,7 @@ body {
     background-size: 100%;
     margin: 0px;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: white;
     font-weight: bold;
 }
@@ -41,10 +41,11 @@ li:before {
 }
 
 .col {
-    width: 44%;
+    width: 42%;
     background-color: rgba(0,0,0,0.6);
     height: 100vh;
     padding: 2%;
+    padding-left: 4%;
     padding-bottom: 5%;
 }
 
