--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -117,7 +117,7 @@ a:hover {
 }
 
 #footer {
-  background-color: grey;
+  background-color: rgba(84,84,84,0.9);
   color: white;
   text-align: center;
   padding-top: 0.5em;
