--- a/stylesheets/island.css
+++ b/stylesheets/island.css
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-    background-color: rgba(240, 240, 240, 0.85);
+    background-color: rgba(240, 240, 240, 0.9);
     height: auto;
     min-height: 100%;
     width: 75%;
@@ -100,4 +100,22 @@ div.article-title {
 .code {
     float: left;
     width: 65%;
+}
+
+.row {
+    clear: left;
+}
+
+.example {
+    font-weight: bold;
+}
+
+a {
+    color: #003399;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+li {
+    list-style-type: none;
 }
