partial progress on React walkthrough

--- a/stylesheets/island.css
+++ b/stylesheets/island.css
@@ -119,3 +119,11 @@ a {
 li {
     list-style-type: none;
 }
+
+.main-function {
+    background-color: #BADA55;
+}
+
+.sub-function {
+    background-color: #FFFF66;
+}
